--- a/client/rpc/Cargo.toml
+++ b/client/rpc/Cargo.toml
@@ -22,7 +22,7 @@ log = { workspace = true }
 prometheus = { version = "0.13.1", default-features = false }
 rand = "0.8"
 rlp = { workspace = true }
-scale-codec = { package = "parity-scale-codec", workspace = true }
+scale-codec = { workspace = true }
 schnellru = "0.2.1"
 serde = { workspace = true }
 thiserror = { workspace = true }
