--- a/frame/ethereum/Cargo.toml
+++ b/frame/ethereum/Cargo.toml
@@ -14,7 +14,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 ethereum = { workspace = true, features = ["with-codec"] }
 ethereum-types = { workspace = true }
 evm = { workspace = true, features = ["with-codec"] }
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 # Substrate
 frame-support = { workspace = true }
@@ -48,7 +48,7 @@ std = [
 	"evm/std",
 	"ethereum-types/std",
 	"rlp/std",
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	# Substrate
 	"frame-support/std",
