--- a/frame/evm-chain-id/Cargo.toml
+++ b/frame/evm-chain-id/Cargo.toml
@@ -11,7 +11,7 @@ repository = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 # Substrate
 frame-support = { workspace = true }
@@ -21,7 +21,7 @@ sp-runtime = { workspace = true }
 [features]
 default = ["std"]
 std = [
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	# Substrate
 	"frame-support/std",
