--- a/frame/evm/Cargo.toml
+++ b/frame/evm/Cargo.toml
@@ -20,7 +20,7 @@ hex-literal = { workspace = true }
 impl-trait-for-tuples = "0.2.2"
 log = { workspace = true }
 rlp = { workspace = true, optional = true }
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
@@ -50,7 +50,7 @@ std = [
 	"hex?/std",
 	"log/std",
 	"rlp?/std",
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	# Substrate
 	"frame-benchmarking?/std",
