--- a/frame/hotfix-sufficients/Cargo.toml
+++ b/frame/hotfix-sufficients/Cargo.toml
@@ -12,7 +12,7 @@ repository = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 # Substrate
 frame-benchmarking = { workspace = true, optional = true }
@@ -31,7 +31,7 @@ sp-io = { workspace = true, features = ["default"] }
 [features]
 default = ["std"]
 std = [
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	# Substrate
 	"frame-benchmarking?/std",
