--- a/primitives/ethereum/Cargo.toml
+++ b/primitives/ethereum/Cargo.toml
@@ -13,7 +13,7 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 ethereum = { workspace = true, features = ["with-codec"] }
 ethereum-types = { workspace = true }
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 # Substrate
 frame-support = { workspace = true }
 sp-std = { workspace = true }
@@ -25,7 +25,7 @@ default = ["std"]
 std = [
 	"ethereum/std",
 	"ethereum-types/std",
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	# Substrate
 	"frame-support/std",
 	"sp-std/std",
