--- a/primitives/rpc/Cargo.toml
+++ b/primitives/rpc/Cargo.toml
@@ -13,11 +13,10 @@ targets = ["x86_64-unknown-linux-gnu"]
 [dependencies]
 ethereum = { workspace = true, features = ["with-codec"] }
 ethereum-types = { workspace = true }
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
 # Substrate
 sp-api = { workspace = true }
-sp-core = { workspace = true }
 sp-runtime = { workspace = true }
 sp-state-machine = { workspace = true }
 sp-std = { workspace = true }
@@ -29,12 +28,11 @@ default = ["std"]
 std = [
 	"ethereum/std",
 	"ethereum-types/std",
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"scale-info/std",
 	# Substrate
 	"sp-api/std",
 	"sp-state-machine/std",
-	"sp-core/std",
 	"sp-runtime/std",
 	"sp-std/std",
 	# Frontier
