--- a/primitives/storage/Cargo.toml
+++ b/primitives/storage/Cargo.toml
@@ -11,13 +11,13 @@ repository = { workspace = true }
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-scale-codec = { package = "parity-scale-codec", workspace = true }
+parity-scale-codec = { workspace = true }
 serde = { workspace = true, optional = true }
 
 [features]
 default = ["std"]
 std = [
-	"scale-codec/std",
+	"parity-scale-codec/std",
 	"serde/std",
 ]
 serde = [
