--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,7 +174,7 @@ fp-consensus = { version = "2.0.0-dev", path = "primitives/consensus", default-f
 fp-dynamic-fee = { version = "1.0.0", path = "primitives/dynamic-fee", default-features = false }
 fp-ethereum = { version = "1.0.0-dev", path = "primitives/ethereum", default-features = false }
 fp-evm = { version = "3.0.0-dev", path = "primitives/evm", default-features = false }
-fp-rpc = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
+fp-rpc-phron = { version = "3.0.0-dev", path = "primitives/rpc", default-features = false }
 fp-self-contained = { version = "1.0.0-dev", path = "primitives/self-contained", default-features = false }
 fp-storage = { path = "primitives/storage", default-features = false }
 # Frontier FRAME
