--- a/client/mapping-sync/Cargo.toml
+++ b/client/mapping-sync/Cargo.toml
@@ -28,7 +28,7 @@ sp-runtime = { workspace = true }
 fc-db = { workspace = true, default-features = false }
 fc-storage = { workspace = true }
 fp-consensus = { workspace = true, features = ["default"] }
-fp-rpc = { workspace = true, features = ["default"] }
+fp-rpc-phron = { workspace = true, features = ["default"] }
 
 [dev-dependencies]
 ethereum = { workspace = true }
