--- a/primitives/rpc/Cargo.toml
+++ b/primitives/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "fp-rpc"
+name = "fp-rpc-phron"
 version = "3.0.0-dev"
 license = "Apache-2.0"
 description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
