--- a/client/phron/rpc/debug/Cargo.toml
+++ b/client/phron/rpc/debug/Cargo.toml
@@ -36,4 +36,4 @@ fc-consensus = { workspace = true }
 fc-db = { workspace = true }
 fc-rpc = { workspace = true, features = ["rpc-binary-search-estimate"] }
 fc-storage = { workspace = true }
-fp-rpc = { workspace = true, features = ["default"] }
+fp-rpc-phron = { workspace = true, features = ["default"] }
